# libffi-dynamic

./: README.md  Test.hs  libffi-experiments.cabal  test.c
cbits/: closures.c  dlmalloc.c  ffi_wrappers.c
examples/: Test.hs  test-c.c
include/: hs_libffi_closure.h
src/Foreign/: Dynamic.hs  Wrapper.hs
src/Foreign/LibFFI/: Dynamic.hs  Experimental.hs
src/Foreign/LibFFI/Dynamic/: Base.hsc  CIF.hsc  Closure.hs  FFIType.hsc  Type.hsc
src/Foreign/LibFFI/Experimental/: Base.hs  Base.hsc  CIF.hsc  Closure.hs  FFIType.hs  Struct.hsc  Type.hsc  Types.hs
