name:                   libffi-experiments
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

Library
  hs-source-dirs:       src
  c-sources:            cbits/ffi_wrappers.c
  exposed-modules:      Foreign.Dynamic
                        Foreign.LibFFI.Experimental
                        Foreign.LibFFI.Experimental.Base
                        Foreign.LibFFI.Experimental.Types
  ghc-options:          -fwarn-unused-binds -fwarn-unused-imports
  build-depends:        base >= 3,
                        tagged
